add backup simulator and update documentation

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Oracle Database Incarnation Simulator - Learn and experiment with Oracle database incarnations"
+      content="Oracle Database Simulator - Learn and experiment with Oracle database incarnations and backup strategies"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Oracle Database Incarnation Simulator</title>
+    <title>Oracle Database Simulator</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
